--- a/Backend/compiler/reportes/tabla_simbolos.html
+++ b/Backend/compiler/reportes/tabla_simbolos.html
@@ -89,7 +89,7 @@
 </tbody>
 </table>
 <script>
-const rows = ``;
+const rows = `<tr><td>b</td><td>Variable</td><td>Bool</td><td class='scope-global'>global</td><td>27</td><td>0</td></tr><tr><td>k</td><td>Variable</td><td>Character</td><td class='scope-global'>global</td><td>14</td><td>0</td></tr><tr><td>var</td><td>Variable</td><td>Int</td><td class='scope-global'>global</td><td>21</td><td>0</td></tr><tr><td>u</td><td>Variable</td><td>Int</td><td class='scope-global'>global</td><td>25</td><td>0</td></tr><tr><td>r</td><td>Variable</td><td>Character</td><td class='scope-global'>global</td><td>28</td><td>0</td></tr><tr><td>x</td><td>Variable</td><td>Int</td><td class='scope-global'>global</td><td>11</td><td>0</td></tr><tr><td>s</td><td>Variable</td><td>String</td><td class='scope-global'>global</td><td>12</td><td>0</td></tr><tr><td>y</td><td>Variable</td><td>Float</td><td class='scope-global'>global</td><td>13</td><td>0</td></tr><tr><td>l</td><td>Variable</td><td>Bool</td><td class='scope-global'>global</td><td>15</td><td>0</td></tr><tr><td>o</td><td>Variable</td><td>Float</td><td class='scope-global'>global</td><td>26</td><td>0</td></tr>`;
 const table = document.getElementById('tablaSimbolos');
 const tbody = table.getElementsByTagName('tbody')[0];
 let i = 0;
