--- a/Backend/compiler/reportes/tabla_simbolos.html
+++ b/Backend/compiler/reportes/tabla_simbolos.html
@@ -89,7 +89,7 @@
 </tbody>
 </table>
 <script>
-const rows = `<tr><td>resta</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>44</td><td>1</td></tr><tr><td>puntos</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>2</td><td>1</td></tr><tr><td>entero</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>6</td><td>1</td></tr><tr><td>decimal</td><td>Variable</td><td>Float</td><td class=''>fn_main</td><td>7</td><td>1</td></tr><tr><td>texto</td><td>Variable</td><td>String</td><td class=''>fn_main</td><td>8</td><td>1</td></tr><tr><td>booleano</td><td>Variable</td><td>Bool</td><td class=''>fn_main</td><td>9</td><td>1</td></tr><tr><td>suma</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>38</td><td>1</td></tr><tr><td>main</td><td>Función</td><td>function</td><td class=''>fn_main</td><td>0</td><td>0</td></tr>`;
+const rows = `<tr><td>saludar</td><td>Función</td><td>function</td><td class=''>fn_saludar</td><td>0</td><td>0</td></tr><tr><td>puntos</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>6</td><td>1</td></tr><tr><td>puntos_simples</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>10</td><td>1</td></tr><tr><td>main</td><td>Función</td><td>function</td><td class=''>fn_main</td><td>0</td><td>0</td></tr>`;
 const table = document.getElementById('tablaSimbolos');
 const tbody = table.getElementsByTagName('tbody')[0];
 let i = 0;
