--- a/Backend/compiler/reportes/tabla_simbolos.html
+++ b/Backend/compiler/reportes/tabla_simbolos.html
@@ -89,7 +89,7 @@
 </tbody>
 </table>
 <script>
-const rows = `<tr><td>saludar</td><td>Función</td><td>function</td><td class=''>fn_saludar</td><td>0</td><td>0</td></tr><tr><td>puntos</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>6</td><td>1</td></tr><tr><td>puntos_simples</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>10</td><td>1</td></tr><tr><td>main</td><td>Función</td><td>function</td><td class=''>fn_main</td><td>0</td><td>0</td></tr>`;
+const rows = `<tr><td>saludar</td><td>Función</td><td>function</td><td class=''>fn_saludar</td><td>0</td><td>0</td></tr><tr><td>obtener_numero</td><td>Función</td><td>function</td><td class=''>fn_obtener_numero</td><td>0</td><td>0</td></tr><tr><td>puntos</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>11</td><td>1</td></tr><tr><td>puntos_simples</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>15</td><td>1</td></tr><tr><td>numero</td><td>Variable</td><td>Int</td><td class=''>fn_main</td><td>16</td><td>8</td></tr><tr><td>main</td><td>Función</td><td>function</td><td class=''>fn_main</td><td>0</td><td>0</td></tr>`;
 const table = document.getElementById('tablaSimbolos');
 const tbody = table.getElementsByTagName('tbody')[0];
 let i = 0;
